src/Cluster_jobs/nimrod_tests/Output/32bit_seed/err/stderr-17.txt
Warning message:
In read.table(file = file, header = header, sep = sep, quote = quote,  :
  incomplete final line found by readTableHeader on '/tmp/sig_eSQXns.csv'
ERROR (Eidos_ExecuteFunction_rmvnorm): function rmvnorm() requires that sigma, the variance-covariance matrix, be positive-definite.

Error on script line 385, character 13:

         effects = rmvnorm(1, pleio_mu, pleio_sigma);      // Calculate effects for m3 here since a mutation callback won't be called since it isn't autogenerated
                   ^^^^^^^
cat: //state/partition1/pbs/tmpdir/pbs.346014.tinmgr2/nimrodg-localact-6721694910908594920/1ccbd5a7-061e-4d38-ae02-1ee752bc34b0/3c6220f9-bec1-4b7e-8a42-991109b3f894/tmp/out_8T_null_means.csv: No such file or directory
cat: //state/partition1/pbs/tmpdir/pbs.346014.tinmgr2/nimrodg-localact-6721694910908594920/1ccbd5a7-061e-4d38-ae02-1ee752bc34b0/3c6220f9-bec1-4b7e-8a42-991109b3f894/tmp/out_8T_null_muts.csv: No such file or directory
cat: //state/partition1/pbs/tmpdir/pbs.346014.tinmgr2/nimrodg-localact-6721694910908594920/1ccbd5a7-061e-4d38-ae02-1ee752bc34b0/3c6220f9-bec1-4b7e-8a42-991109b3f894/tmp/out_8T_null_burnin.csv: No such file or directory
